# rust

Rust_The_Complete_Guide/cli/src/: find_and_replace.rs
Rust_The_Complete_Guide/section_2/variables/src/: main.rs
Rust_The_Complete_Guide/section_6/assignment/src/: main.rs
Rust_The_Complete_Guide/section_7/todo/src/: things_todo.rs
Rust_The_Complete_Guide/section_7/todo/src/things_todo/: items_completed.rs
Rust_The_Complete_Guide/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
Rust_The_Complete_Guide/wasm-game-of-life/www/: index.html  index.js  package-lock.json  package.json
easy-rust/: .env  Cargo.toml
easy-rust/my_db/: 000008.sst  000013.sst  000018.sst  000023.sst  000030.sst  000035.sst  000050.sst  000053.sst  IDENTITY  LOG  LOG.old.1694399754262195  LOG.old.1694410125077537  LOG.old.1694410143922014  LOG.old.1694410184641603  LOG.old.1694417017650128  LOG.old.1694418513963462  LOG.old.1694418537270448  MANIFEST-000025  MANIFEST-000032  MANIFEST-000047  MANIFEST-000055
easy-rust/src/: index.js  main.rs  main_test.rs  output.txt  sync_block.rs
